<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/shape_white"
    android:orientation="vertical"
    android:showDividers="middle"
    android:gravity="center"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/value_null"
            android:id="@+id/tvNomeMoeda"
            android:textColor="#B09039"
            android:textStyle="bold"
            android:textSize="21sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_config"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_settings_black_18dp"
            android:contentDescription="@string/config"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:paddingRight="10dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="12dp"
        android:layout_gravity="left"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvTitulo_Data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/data"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:textSize="15sp"
            android:paddingRight="5dp" />

        <TextView
            android:id="@+id/tvData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nulo"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginLeft="3dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvTitulo_Compra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingRight="5dp"
                android:text="@string/taxa_compra"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvTaxa_Compra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:paddingRight="70dp"
                android:text="@string/nulo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0084cc"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvTitulo_Venda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="15dp"
                android:text="@string/taxa_venda"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvTaxa_Venda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/nulo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0084cc"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvFonte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fonte"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#f80"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

</LinearLayout>